[package]
name = "wav2txt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
clap = { version = "4.3.0", features = ["derive"] }
hound = "3.5.0"
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", version = "0.8.0" }
